# sudoku-solver-server

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
docker_tests/: docker_webservice_live.py  post_test_docker.py  solve_sudoku_docker_test.py  solve_sudoku_test.py
fastapi_server/: main.py  timeout.py
fastapi_server/tests/: post_to_server_test.py
preprocessing/: recognize_digits.py  sudoku_preprocessing.py
sudoku_server.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
sudoku_solver/: search.py  sudoku_solver.py
tests/: post_to_local_server.py  post_to_server_test.py  preprocessing_and_recognition_test.py  server_online_test.py  sudoku_solver_test.py  tesseract_check.py
